<resources>
    <string name="app_name">Mintic</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="botonIngresar">Ingresar</string>
    <string name="botonRegistrar">Registrar</string>

    <!--MIS DATOS-->
    <string name="MisDatosTXT">MI CUENTA</string>
    <string name="uidDato">UID</string>
    <string name="NombresDato">NOMBRES</string>
    <string name="ApellidosDato">APELLIDOS</string>
    <string name="CorreoDato">CORREO</string>
    <string name="PasswordDato">PASSWORD</string>
    <string name="EdadDato">EDAD</string>
    <string name="DireccionDato">DIRECCION</string>
    <string name="TelefonoDato">TELEFONO</string>
    <string name="Actualizar">Actualizar Datos</string>
    <string name="ActualizarPass">Actualizar Pass</string>
    <string name="informacion_adicional">Información Adicional</string>

    <string name="registrar">Registrar</string>
    <string name="entrada_email">Registrar</string>
    <string name="entrada_password">Registrar</string>


</resources>